--- a/09侦听属性/监听简写.html
+++ b/09侦听属性/监听简写.html
@@ -8,13 +8,12 @@
 <body>
     <div id="root">
         <h3>今天天气很{{info}}</h3>
-        <!-- <button @click="isHot=!isHot">切换天气</button> -->
         <button @click="changeWeather">切换天气</button>
    </div>
 
     <script type = 'text/javascript'>
         Vue.config.productionTip = false
-        const a  = new Vue({
+        const vm  = new Vue({
             el:'#root',
             data:{
                 isHot:true
@@ -28,24 +27,19 @@
             },
             methods:{
                 changeWeather(){
-                    this.isHot= !this.isHot
+                    this.isHot=!this.isHot
                 }
             },
-            // 方式一
+            // 简写
             // watch:{
-            //     isHot:{
-            //         imediate:true,
-            //         handler(newValue,oldValue){
-            //             console.log('isHost被修改了',newValue,oldValue)
-            //         }
+            //     isHot(newValue,oldValue){
+            //         console.log('变更了',newValue,oldValue)
             //     }
             // }
         })
-        a.$watch('isHot',{
-            imediate:true,
-                    handler(newValue,oldValue){
-                        console.log('isHost被修改了',newValue,oldValue)
-                    }
+        // 简写
+        vm.$watch('isHot',(newValue,oldValue)=>{
+            console.log('值变动了',newValue,oldValue)
         })
     </script>
 </body>
