--- a/08计算属性/03.computed.html
+++ b/08计算属性/03.computed.html
@@ -3,40 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <script type="text/javascript" src="../js/vue.js"></script>
-    <title>姓名案例_插值语法实现</title>
+    <title>姓名案例-compited</title>
  </head>
 <body>
     <div id="root">
         姓:<input type=text v-model="firstName">
         名:<input type=text v-model="lastName">
-        名:<input type=text v-model="fullNameComputed">
-        全名:<span>{{firstName}}-{{lastName}}</span>
-        <!-- 方法实现 -->
-        全名:<span>{{fullName()}}</span>
         <!-- 需要的属性不存在,需要通过已有的属性计算得到 -->
-        全名:<span>{{fullNameComputed}}</span>
+        全名:<span>{{fullName}}</span>
    </div>
 
     <script type = 'text/javascript'>
         Vue.config.productionTip = false
-        const a  = new Vue({
+        const vm  = new Vue({
             el:'#root',
+            // data中的是属性
             data:{
                 firstName:'pad',
                 lastName:'嘻嘻哈哈哈'
             },
-            methods:{
-                fullName(){
-                    return this.firstName+'-'+this.lastName
-                }
-            },
+            // computed中的是计算属性
             computed:{
-                fullNameComputed:{
+                fullName:{
+                    // 有人读取fullName时,get会被调用,返回值作为FullName的值。
                     get(){
                         console.log('get被调用了')
                         return this.firstName+'-'+this.lastName
                     },
                     set(value){
+                        // this指的是vm对象,直接获取属性是获取不到的。
+                        //fullName被修改是会调用改方法.
                         const str=  value.split('-');
                         this.firstName = str[0];
                         this.lastName = str[1];
