--- a/07_事件处理/事件处理 copy.html
+++ b/07_事件处理/事件处理 copy.html
@@ -15,6 +15,7 @@
    </div>
 
     <script type = 'text/javascript'>
+        //组织vue在启动是生产提示
         Vue.config.productionTip = false
         const a  = new Vue({
             el:'#root',
