--- a/09监视属性/01_天气案例.html
+++ b/09监视属性/01_天气案例.html
@@ -6,9 +6,11 @@
     <title>天气案例</title>
  </head>
 <body>
+    <!-- 容器 -->
     <div id="root">
-        <h3>今天天气很{{info}}</h3>
-        <!-- <button @click="isHot=!isHot">切换天气</button> -->
+        <h3>今天天气很{{info}} 执行次数{{n}}</h3>
+        <!-- click 执行的是语句 -->
+        <!-- <button @click="isHot!=isHot;n++">切换天气</button> -->
         <button @click="changeWeather">切换天气</button>
    </div>
 
@@ -17,7 +19,8 @@
         const a  = new Vue({
             el:'#root',
             data:{
-                isHot:true
+                isHot:true,
+                n:0
             },
             computed:{
                 info:{
@@ -28,24 +31,10 @@
             },
             methods:{
                 changeWeather(){
-                    this.isHot= !this.isHot
+                    this.isHot=!this.isHot,
+                    this.n++
                 }
-            },
-            // 方式一
-            // watch:{
-            //     isHot:{
-            //         imediate:true,
-            //         handler(newValue,oldValue){
-            //             console.log('isHost被修改了',newValue,oldValue)
-            //         }
-            //     }
-            // }
-        })
-        a.$watch('isHot',{
-            imediate:true,
-                    handler(newValue,oldValue){
-                        console.log('isHost被修改了',newValue,oldValue)
-                    }
+            } 
         })
     </script>
 </body>
