--- a/09监视属性/02_监视属性watch.html
+++ b/09监视属性/02_监视属性watch.html
@@ -8,7 +8,7 @@
 <body>
     <div id="root">
         <h3>今天天气很{{info}}</h3>
-        <!-- <button @click="isHot!=isHot">切换天气</button> -->
+        <!-- <button @click="isHot=!isHot">切换天气</button> -->
         <button @click="changeWeather">切换天气</button>
    </div>
 
@@ -28,9 +28,26 @@
             },
             methods:{
                 changeWeather(){
-                    this.isHot!=this.isHot
+                    this.isHot= !this.isHot
                 }
-            }   
+            },
+            // 方式一:当isHot发生变化时,监听到。
+            // watch:{
+            //     isHot:{
+                // 立即调用,即初始化的时候调用。
+            //         imediate:true,
+            //         handler(newValue,oldValue){
+            //             console.log('isHost被修改了',newValue,oldValue)
+            //         }
+            //     }
+            // }
+        })
+        // 方式二
+        a.$watch('isHot',{
+            imediate:true,
+                    handler(newValue,oldValue){
+                        console.log('isHost被修改了',newValue,oldValue)
+                    }
         })
     </script>
 </body>
