--- a/02_Vue模板语法/模板语法.html
+++ b/02_Vue模板语法/模板语法.html
@@ -3,15 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <script type="text/javascript" src="../js/vue.js"></script>
-
 </head>
 <body>
     <div id="root">
+        <!-- 插值語法 -->
         <h1>插值语法</h1>
-        <h3>你好 {{name}}</h3>
+        <h3>你好{{name}}</h3>
+
+        <!-- 指令語法 -->
         <h1>指令语法</h1>
-        <a v-bind:href="url">跳转百度 </h3>
-        <a :href="url">跳转百度 </h3>
+        <a v-bind:href="shcool.url">跳转百度</h3>
+        <a :href="shcool.url">跳转百度</h3>
          <h3>你好 {{shcool.name}}</h3>
         </div>
 
