--- a/06_数据代理/Object.defineProperty copy.html
+++ b/06_数据代理/Object.defineProperty copy.html
@@ -10,6 +10,7 @@
         <h1>名称:{{name}}</h1>
         <h1>學校:{{address}}</h1>
         <!-- Vu而对象的属性都可以打印 -->
+        <h1>學校:{{age}}</h1>
         <h1>學校:{{$options}}</h1>
    </div>
     <script type = 'text/javascript'>
@@ -18,26 +19,28 @@
         let person = {
             name:'张三',
             sex:'楠'
-            //age:18
+         //   age:18,
         }
         Object.defineProperty(person,'age',{
-            value:18,
-            enumerable:true, //控制属性是否可以枚举,默认值false
-            writable:true, //控制属性是否被修改 默认值false
-            configurable:true,//控制属性是否可以被删除,默认值false。
+            // value:18,
+            // enumerable:true, //控制属性是否可以枚举,默认值false
+            // writable:true, //控制属性是否被修改 默认值false
+            // configurable:true,//控制属性是否可以被删除,默认值false。
             //当有人读取person的age属性时,get函数会被调用,切返回值就是age的值。
-            get:function(){
+            get(){
                 // 每次读取的时候都会返回number,即使numnber发生改变。
+                console.log('读取')
                return number
             },
             //当有人我修改person的age属性时,set函数会被调用,切回收到修改的具体值。
             set(value){
+                console.log('写入')
                 number = value
             }
         })
-        console.log(Object.keys())
-        console.log(person(person))
-
+        console.log(person)
+        console.log(person.age)
+        person.age = 19;
     </script>
 </body>
 </html>
