--- a/06_数据代理/Vue中的数据代理.html
+++ b/06_数据代理/Vue中的数据代理.html
@@ -15,16 +15,16 @@
         let number = 18
         let person = {
             name:'张三',
-            sex:'楠'
-            //age:18
+            sex:'楠',
+            age:18
         }
         Object.defineProperty(person,'age',{
-            value:18,
-            enumerable:true, //控制属性是否可以枚举,默认值false
-            writable:true, //控制属性是否被修改 默认值false
-            configurable:true,//控制属性是否可以被删除,默认值false。
+            // value:18,
+            // enumerable:true, //控制属性是否可以枚举,默认值false
+            // writable:true, //控制属性是否被修改 默认值false
+            // configurable:true,//控制属性是否可以被删除,默认值false。
             //当有人读取person的age属性时,get函数会被调用,切返回值就是age的值。
-            get:function(){
+            get(){
                 // 每次读取的时候都会返回number,即使numnber发生改变。
                return number
             },
@@ -33,9 +33,7 @@
                 number = value
             }
         })
-        console.log(Object.keys())
-        console.log(person(person))
-
+        console.log(person)
     </script>
 </body>
 </html>
