--- a/06_数据代理/何为数据代理.html
+++ b/06_数据代理/何为数据代理.html
@@ -13,15 +13,15 @@
 
     <script type = 'text/javascript'>
         Vue.config.productionTip = false
-        new Vue({
+        const s = new Vue({
             el:'#root',
             data:{
             name:'哈哈',
             address:'尚硅谷'
             }
         })
-    
-
+        console.log(s)
+        
     </script>
 </body>
 </html>
