--- a/07_事件处理/事件处理.html
+++ b/07_事件处理/事件处理.html
@@ -28,13 +28,16 @@
                   alert('你好')
               },
               showInfo1(event){
+                // this是vue实例
+                console.log(this)
                   alert('喝喝')
               },
               showInfo2(event,number){
+                // event 事件对象
+                console.log(event,number)
                   alert(number)
               }
             }
-            
         })
     </script>
 </body>
