--- a/16_组件化编程/01_组件基本使用.html
+++ b/16_组件化编程/01_组件基本使用.html
@@ -19,7 +19,6 @@
 <script type="text/javascript">
 	Vue.config.productionTip = false
 
-
 	//创建shcool组件
 	const school = Vue.extend({
 		//el:'#root,//组件定义时一定不要写el配置项。
@@ -90,11 +89,10 @@
 		},
 		components: {
 			school,
-			student
-			// 
+			student,
+			hello
 		}
 	})
-
 </script>
 
 </html>
