--- a/17_单文件组件/index.html
+++ b/17_单文件组件/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>练习单文件组件语法</title>
+    <title>单文件组件练习</title>
+
 </head>
 <body>
-    <div id = 'root'>
-    </div>
-    <script type="text/javascript" src="../js/vue.js"></script>
-    <script type="text/javascript" src="./main.js"></script>
+    <div id="root"></div>
+    <script src="../js/vue.js"></script>
+    <script src="./main.js"></script>
 </body>
 </html>
