--- a/01_初识vue/初识Vue.html
+++ b/01_初识vue/初识Vue.html
@@ -13,7 +13,7 @@
     </div>
 
     <script type="text/javascript">
-      //  Vue.config.productionTip = false
+        Vue.config.productionTip = false
         //创建Vue实例
          new Vue({
             el:'#root1',//el用于指定当前Vue实例为那个容器服务,值通常为Css选择器字符串
