--- a/06_数据代理/Object.defineProperty copy.html
+++ b/06_数据代理/Object.defineProperty copy.html
@@ -9,6 +9,8 @@
     <div id="root">
         <h1>名称:{{name}}</h1>
         <h1>學校:{{address}}</h1>
+        <!-- Vu而对象的属性都可以打印 -->
+        <h1>學校:{{$options}}</h1>
    </div>
     <script type = 'text/javascript'>
         Vue.config.productionTip = false
