--- a/11_列表渲染/5.列表排序.html
+++ b/11_列表渲染/5.列表排序.html
@@ -8,16 +8,9 @@
 	<body>
 		<div id="root">
 			<!-- 遍历数组 -->
-			<input type="text" placeholder="请输入名字" v-model="keyWord">
-			<button @click="sortType = 2">年龄升序</button>
-			<button @click="sortType = 1">年龄降序</button>
-			<button @click="sortType = 0">原顺序</button>
-			<ul>
-				<li v-for="(p,index) of sortPersons" :key="p.id">
-				  {{p.name}}-{{p.age}}-{{p.sex}}
-				  <input type="text">
-				</li>
-			  </ul>
+			<button @click="updateMei">更新</button>
+			<h3>人员列表(遍历数组)</h3>
+			<ul v-for="(p,index) of persons" :key="index">{{p.name}},{{p.age}}-{{p.sex}}</ul>
 		</div>
 		
 	</body>
@@ -28,9 +21,6 @@
 		const vm = new Vue({
 			el:'#root',
 			data:{
-				keyWord:'',
-				// 0原顺序 1：升序 2:降序
-				sortType:0,
 				persons:[
 					{id:"001",name:"马冬梅",age:30,sex:'女'},
 					{id:"002",name:"周冬雨",age:31,sex:'女'},
@@ -38,22 +28,13 @@
 					{id:"004",name:"温兆伦",age:19,sex:'男'}
 				]
 			},
-			computed:{
-				sortPersons(){
-					const arr = this.persons.filter((p) => {
-        				  return p.name.indexOf(this.keyWord) !== -1
-     			   	});
-					if(this.sortType){
-						arr.sort((p1,p2)=>{
-							return this.sortType===1?p2.age-p1.age:p1.age-p2.age
-						})
-					}else {
-
-					}
-					return arr;
+			methods: {
+				updateMei(){
+					this.persons[0].name = '马老师',
+					this.persons[0].age = 50,
+					this.persons[0].sex = '楠'
 				}
-			}
-		
+			},
 
 		})
 	</script>
